[tool.poetry]
name = "userpg"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.4.1"
pgadmin4 = {version = "^5.3", extras = ["pgadmin"]}
gunicorn = {version = "^20.1.0", extras = ["pgadmin"]}

[tool.poetry.dev-dependencies]
ipython = "^7.23.1"

[tool.poetry.scripts]
userpg = 'userpg.cli:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

