[tool.poetry]
name = "userpg"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6"

[tool.poetry.dev-dependencies]
ipython = "*"

[tool.poetry.scripts]
userpg = 'userpg.cli:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

